Add hyperlinks for collaborators to their GitHub profiles

--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -406,7 +406,7 @@
 
         <p><strong>Scientific Supervisor:</strong></p>
         <ul>
-          <li>Diomidis Spinellis - Professor</li>
+          <li><a href="https://github.com/dspinellis" target="_blank"></a>Diomidis Spinellis - Professor</a></li>
         </ul>
 
         <p><strong>Developers:</strong></p>
