--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -52,7 +52,7 @@
         // Check screen size on load
         function checkScreenSize() {
             if (window.innerWidth <= 768) {
-                loadStylesheet("/css/mobile.css");
+                loadStylesheet("/css/mobileHomePage.css");
 
                 // Show the mobile alert if user is on a mobile device and has not dismissed the alert
                 if (!sessionStorage.getItem("mobileAlertDismissed")) {
