--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,7 @@ body {
 #navbar {
   display: flex;
   align-items: center;
+  justify-content: space-between; /* Ensure space between left and right sections */
   height: auto;
   padding: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -36,18 +37,18 @@ body {
   flex: 1;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-start; /* Align to the left */
   padding: 4px;
   border-radius: 5px;
 }
 
 #buttonContainer {
-  flex: 2;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-end; /* Align buttons to the right */
   padding: 4px;
   flex-wrap: wrap;
+  margin-left: auto; /* Push the container to the right */
 }
 
 /* Buttons and Dropdowns */
