Minor website tweaks
Fixed incorrect link in homePage.js, Updated register error message to be more specific, Added a 'Copied' message when user successfully copies result

--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -352,7 +352,7 @@
             <h4>Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="/index.html">Ublocks</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="/blockly_unix">Ublocks</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="/tutorials">Tutorials</a></li>
             </ul>
           </div>
